# loli

./: .gitignore  LICENSE  Nemesis  changelog.md  known-issues.md  loli.cabal  readme.md  release.md
public/css/: custom.css
src/: Test.hs  Test.txt
src/Debug/: Debug.hs
src/Network/: Loli.hs
src/Network/Loli/: Config.hs  DSL.hs  Engine.hs  Template.hs  Type.hs  Utils.hs
src/Network/Loli/Middleware/: Cascade.hs  IOConfig.hs  LoliRouter.hs  UserMime.hs
src/Network/Loli/Template/: ConstTemplate.hs  TextTemplate.hs
src/Test/: LoliPaste.hs  Moe.hs  Test.hs  myapp.hs  pure_hack.hs
views/: hello.html  layout.html
views/loli_paste/: create.html  layout.html  list.html  view.html
wiki/: home.textile  style.textile
