Name:                 loli
Version:              2009.6.25
Build-type:           Simple
Synopsis:             loli
Description:
        
    A minimum web development DSL

License:              BSD3
License-file:         LICENSE
Author:               Wang, Jinjing
Maintainer:           Wang, Jinjing <nfjinjing@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
homepage:             http://github.com/nfjinjing/loli
data-files:           readme.md, changelog.md, Nemesis, known-issues.md

library
  ghc-options: -Wall
  build-depends: base
  hs-source-dirs: src/
  exposed-modules:  
                      Template

Executable            launcher
  ghc-options:        -Wall
  build-depends:      base
  hs-source-dirs:     src/
  main-is:            Launcher.hs
  other-modules:      
                      Template.Other